[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-stock-data"
version = "3.2.2"
description = "A股全栈数据工具包 — 零依赖直连13数据源"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Simon 林", email = "simonlin@example.com"},
]
keywords = ["a-stock", "stock-data", "A股", "行情", "研报", "龙虎榜", "资金流"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "mootdx>=0.10",
    "stockstats",
]
all = [
    "mootdx>=0.10",
    "stockstats",
]

[project.urls]
"Homepage" = "https://github.com/simonlin1212/a-stock-data"
"Bug Tracker" = "https://github.com/simonlin1212/a-stock-data/issues"
